--- a/LOGO/LOGO/About Us.html
+++ b/LOGO/LOGO/About Us.html
@@ -32,14 +32,14 @@
                 <p>My name is Esther I was born and raised in Southern part of Nigeria, now based in the UK.</p>
                 <p>I am a wife, a cook, and a Cybersecurity specialist.</p>
                 <p>I love everything about food, I love sourcing it, cooking it and eating it.</p>
-                <p>My goal is to ensure your excited about cooking and not see cooking as a chore.</p>
-                <p>You will learn a few recipes and tricks that you can incorporate into your cooking routine so you can start cooking with confidence.</p>
                 <p>EstacyRice web application is an online application that offers different preparation of Nigerian rice recipes like Jollof rice and Coconut rice.</p>
                 <p>These delicacies are some of the meals prepared in Nigeria.</p>
                 <p>This application will provide list of Group Recipes and individual Recipes and will also provide step by step cooking instruction and how it is served.</p>
                 <p>This web application will allow chef to add or edit recipes.</p>
                 <p>This web application will allow recipes seekers to view recipes.</p>
                 <p>Our lists of recipes when combined in a right portion will you that unique taste, aroma and flavor you have always long for.</p>
+                <p>My goal is to ensure your excited about cooking and not see cooking as a chore.</p>
+                <p>You will learn a few recipes and tricks that you can incorporate into your cooking routine so you can start cooking with confidence.</p>
             </div>
     </div>
 </body>
@@ -52,5 +52,12 @@
             <a href="http://www.linkedIn.com"><img src="in.jpeg" alt="linkedIn" wigth="20px" height="20px"></a>
         </ul>
     </h2>
+    <div>
+        <ul>
+            <h2>
+                <p><a href="index.html">Index Page</a></p>
+            </h2>
+        </ul>
+    </div>
 </footer>
 </html>
