--- a/LOGO/LOGO/Contact Us.html
+++ b/LOGO/LOGO/Contact Us.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<link rel="stylesheet" href="">
+<link rel="stylesheet" href="style.css">
 <body class contact-body>
     <div>
         <div class="roll">
@@ -20,25 +20,33 @@
     <form class="roll_1 contact us-form" action="Contact Us.php" method="post">
         <footer>
             <div>
-                <ul class="roll_container">
-                   <h2>
+                <ul>
+                   <h2 class="roll_2">
                     Contact Us
                   </h2>
+                  <div>
+                    <a>205 Victoria Road Torry</a><br>
+                    <a>AB11 9NH</a><br>
+                    <a>transcendentlif.ea@gmail.com</a><br>
+                    <a>+447780125295</a>
+                  </div>
                 </ul> 
             </div>
         <div>   
-            <ul>
-                <a>205 Victoria Road Torry</a><br>
-                <a>AB11 9NH</a><br>
-                <a>transcendentlif.ea@gmail.com</a><br>
-                <a>+447780125295</a>
-            </ul>
+            <h2 class="roll_3">
+                <p>Connect With Us</p>
+                <ul class="roll_6">
+                    <a href="http://www.facebook.com"><img src="Facebook_logo_36x36.svg.png" alt="Facebook" width="20px" height="20px"></a>
+                    <a href="http://www.twitter.com"><img src="Twitter-260nw-601425683.webp" alt="Twitter" wigth="20px" height="20px"></a>
+                    <a href="http://www.linkedIn.com"><img src="in.jpeg" alt="linkedIn" wigth="20px" height="20px"></a>
+                </ul>
+            </h2> 
         </div>
         <div>
-            <ul class="roll_2 home" action="Home.php" method="post">
-                <li>
-                    <a href="home.html">Home Page</a>
-                </li>
+            <ul>
+                <h2 class="roll_5">
+                    <p><a href="index.html">Index Page</a></p>
+                </h2>
             </ul>
         </div>
         </footer>
