--- a/LOGO/LOGO/Register.html
+++ b/LOGO/LOGO/Register.html
@@ -15,10 +15,10 @@
                 </h3>
             </div>
             <div class="L_image">  
-                <img src="Grp_rice.jpg" alt="Rice image">
+                <img src="Grp_rice.jpg" alt="Rice image" width="1270px" height="350px">
             </div>
         </div>
-        <form class="row_3 registration-form" action="Register.html" method="post">
+        <form class="row_3 registration-form" action="Resgister.php" method="post">
             <div class="essy">
               <label for="Lastname" class="form-label lastname">Lastname</label><br>
               <input type="text" class="form-control lastname" id="Lastname" placeholder="Enter Lastname" required><br>
@@ -52,6 +52,13 @@
                 <a href="http://www.linkedIn.com"><img src="in.jpeg" alt="linkedIn" wigth="20px" height="20px"></a>
             </ul>
         </h2>
+        <div>
+            <ul class="con_1 index" action="Index.php" method="post">
+                <h2>
+                    <p><a href="index.html">Index Page</a></p>
+                </h2>
+            </ul>
+        </di>
     </footer>
 </body>
 </html>
