--- a/LOGO/LOGO/login.html
+++ b/LOGO/LOGO/login.html
@@ -39,6 +39,16 @@
                 <a href="http://www.linkedIn.com"><img src="in.jpeg" alt="linkedIn" wigth="20px" height="20px"></a>
             </ul>
         </h2>
+        <div>
+            <form class="coneet_1 index" action="Index.php" method="post">
+                <ul>
+                <h2 class="coneet_2">
+                    <a href="index.html">Index Page</a>
+                </h2>
+            </ul>
+        </di>
     </footer>
 </body>
 </html>
+
+
