--- a/LOGO/LOGO/Home.html
+++ b/LOGO/LOGO/Home.html
@@ -1,61 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <link rel="stylesheet" href="style.css">
+<body class contact-body>
+    <div>
+        <div class="roll">
+            <h2 class="home_heading">
+                Home page
+            </h2>
+        </div>
+        <div class="L_image">  
+            <img src="Grp_rice.jpg" alt="Rice image" width="1270px" height="350px"> 
+        </div>
+    </div>
 
-<body class="Esty">
-    <header>
-            <div class="logo">
-                <a href="#">
-                    <img src="logo esther.png" alt="Estacy logo" width="100px" height="100px">
-                </a>
-            </div>
-            <nav class="nav_container">
-                <ul class="ul_nav">
-                    <li>
-                        <a href="about us.html">About Us</a>
-                    </li>
-                    <li>
-                        <a href="login.html">Login</a>
-                    </li>
-                    <li>
-                        <a href="register.html">Register</a>
-                    </li>
-                    <li>
-                        <a href="groupt recipes.html">Group Recipes</a>
-                    </li>
-                    <li>
-                        <a href="individual recipes.html">Individual Recipes</a>
-                    </li>
-                    <li>
-                        <a href="contact us.html">Contact Us</a>
-                    </li>
-                </ul>
-            </nav>
-        
-    </header>
-       <div class="quency">
-            <div class="pp">
-                <p>For a Delicious Meal or Recipes, You Can Rely On EstacyRice </p>
-            </div>
-            <div class="parent">  
-                <img src="Grp_rice.jpg" alt="Rice image">
-            </div>
-       </div>
-<footer>
-    <h2 class="foot">
-        <p>Connect With Us</p>
-    </h2>
-     <ul class="connect">
-        <li><a href="http://www.facebook.com"><img src="Facebook_logo_36x36.svg.png" alt="Facebook" width="20px" height="20px"></a></li>
-        <li><a href="http://www.twitter.com"><img src="Twitter-260nw-601425683.webp" alt="Twitter" wigth="20px" height="20px"></a></li>
-        <li><a href="http://www.linkedIn.com"><img src="in.jpeg" alt="linkedIn" wigth="20px" height="20px"></a></li>
-     </ul>
-</footer>
-</body>
-</html>
+        <div>
+            <ul>
+                <h2 class="roll_5">
+                   <p><a href="addRecipe.html">Click here to Add Recipe</a></p>
+                   <p><a href="editRecipe.html">Click here to Edit Recipe</a></p>
+                   <p><a href="deleteRecipe.html">Click here to Delete Recipe</a></p>
+                   <p><a href="searchRecipe.html">Click here to Search Recipe</a></p>
+                </h2>
+            </ul>
+        </div>
+    </body>    
+ <html>
