--- a/LOGO/LOGO/LOGO/Contact Us.html
+++ b/LOGO/LOGO/LOGO/Contact Us.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Contact Us</title>
 </head>
 <link rel="stylesheet" href="style.css">
 <body class contact-body>
@@ -18,7 +18,7 @@
         </div>
     </div>
     <form class="roll_1 contact us-form" action="Contact Us.php" method="post">
-        <footer>
+        <footer class="Us">
             <div>
                 <ul>
                    <h2 class="roll_2">
