--- a/LOGO/LOGO/LOGO/Group Recipes.html
+++ b/LOGO/LOGO/LOGO/Group Recipes.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Group Recipe</title>
 </head>
 <link rel="stylesheet" href="style.css">
 <body class="group recipes_body">
     <div>
         <div class="group_1">
-            <h3 class="group_2_heading">
+            <h3 class="group_2">
                 Group Recipes
             </h3>
         </div>
@@ -20,16 +20,24 @@
     <form class="group_3 Group Recipes-form" action="Group Recipes.php" method="post">
         <div class="group_4">
             <img src="Coconut rice-27-1.jpg" alt="Rice image" width="250px" height="250px">
-            <li>
-                <a href="coconut rice recipes.html">Coconut Rice Recipes</a>
-            </li>
+            <a>Coconut Rice Recipes</a>
             <img src="jollof rice.jpg" alt="Rice image" width="250px" height="250px">
-            <li>
-                <a href="jollof rice recipes.html">Jollof Rice Recipes</a>
-            </li>
+                <a>Jollof Rice Recipes</a>
         </div>
         <div>
-       
+            <ul class="group_5">
+                <p>To Explore the Individual Recipe of Each of the Meal, Click on the Individual Recipe Link Below.</p>
+            </ul>
+            <ul class="group_6">
+                <a href="///C:/xampp/htdocs/xampp/LOGO/Individual%20Recipes.html">Individual Recipe</a>
+            </ul>
         </div>
+        <div>
+            <p>To go back to the Index Page click below.</p>
+             <h2>
+                <a href="Index.html"> Index Page</a>
+             </h2>
+        </div>
+
 </body>
 </html>
