--- a/LOGO/LOGO/LOGO/Home.html
+++ b/LOGO/LOGO/LOGO/Home.html
@@ -29,5 +29,11 @@
                 </h2>
             </ul>
         </div>
+        <div>
+            <p>To go back to the Index Page click below.</p>
+            <h2>
+            <a href="Index.html"> Index Page</a>
+            </h2>
+        </div>
     </body>    
  <html>
