--- a/LOGO/LOGO/LOGO/Individual Recipes.html
+++ b/LOGO/LOGO/LOGO/Individual Recipes.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Individual Recipe</title>
 </head>
 <link rel="stylesheet" href="style.css">
 <body class="individual recipes_body">
     <div>
         <div class="ind_1">
-            <h3 class="ind_2_heading">
+            <h3 class="ind_2">
                 Individual Recipes
             </h3>
         </div>
@@ -29,17 +29,23 @@
             </li>
             <img src="fried-ripe-plantains.jpg" alt="Fried plantain image" width="180px" height="180px">
             <li>
-                <a href="fried plantainrecipes.html">Fried Plantain Recipes</a>
+                <a href="fried plantainrecipe.html">Fried Plantain Recipe</a>
             </li>
             <img src="Chicken-Recipe.jpeg" alt="Chicken-Recipe" width="180px" height="180px">
             <li>
-                <a href="chicken recipes.html">Chicken Recipes</a>
+                <a href="chicken recipe.html">Chicken Recipe</a>
             </li>
             <img src="CNrice.jpeg" alt="coconut rice image" width="180px" height="180px">
             <li>
-                <a href="coconut rice recipes.html">Coconut Rice Recipes</a>
+                <a href="coconut rice recipe.html">Coconut Rice Recipes</a>
             </li>
         </div>
+        <div>
+            <ul class="ind_7">
+                <p>To Explore more on the Individual Recipe, Click on each of them.</p>
+            </ul>
+        </div>
+        <footer>
         <div>
             <h2 class="ind_5">
                 <p>Connect With Us</p>
@@ -50,5 +56,12 @@
                 </ul>
             </h2> 
         </div>
+        <div>
+            <p>To go back to the Index Page click below.</p>
+           <h2>
+               <a href="Index.html"> Index Page</a>
+           </h2>
+        </div>
+    </footer>
 </body>
 </html>
