--- a/LOGO/LOGO/LOGO/Jollof Rice Recipe.html
+++ b/LOGO/LOGO/LOGO/Jollof Rice Recipe.html
@@ -2,13 +2,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Jollof Rice Recipe</title>
 </head>
 <link rel="stylesheet" href="style.css">
 <body class="Jollof recipes_body">
     <div>
         <div class="joll_1">
-            <h3 class="sal_2_heading">
+            <h3 class="joll_2">
                 Jollof Rice Recipes
             </h3>
         </div>
@@ -19,7 +19,7 @@
     <form class="joll_3 jollof rice recipes-form" action="Jollof Rice Recipes.php" method="post">
         <div>
             <h2 class="joll_4">
-                Recipes For Jollof Rice
+                Ingredients For Jollof Rice
             </h2>
         </div>
         <div>
@@ -48,7 +48,85 @@
             </ul>
         </div>
         <div>
-            <h2 class="sal_6">
+            <h2 class="joll_6">
                 How to Prepare Negerian Party Jollof
             </h2>
         </div>
+        <div>
+            <ul class="joll_7">
+                <li><p>Start by blending together the roughly chopped fresh tomatoes,<br> red bell pepper, scotch bonnet and red onion in a blender until a smooth pepper and tomato sauce /puree.</p></li>
+            </ul>
+            <ul class="joll_8">
+                <li><p>In a lidded large pan, fry the finely chopped red onion over medium heat until softened.<br>Stir in the tomato paste and garlic (if using) and cook for 3 minutes.</p></li>
+            </ul>
+            <ul class="joll_image">  
+                <img src="Step1.jpg" alt="Rice image" width="270px" height="250px">
+            </ul>
+            <ul class="joll_9">
+                <li><p>Add the blended sauce and stir together with bay leaves,<br> all-purpose seasoning, dried thyme and extra salt to taste. Bring sauce to a boil over high heat,<br>then reduce the heat to simmer for 15 minutes to allow it to thicken the colour will become a deeper red too.</p></li>
+            </ul>
+            <ul class="joll_image1">
+                <img src="Step2-jpeg.webp" alt="Rice image" width="270px" height="250px">
+            </ul>
+            <ul class="joll_10">
+                <li><p>Rinse rice under cold running water to remove all traces of starch <br>before adding it to the saucepan with the thickened spicy sauce.</p></li>
+            </ul>
+            <ul class="joll_image2">
+                <img src="Step3.jpeg" alt="Rice image" width="270px" height="250px">
+            </ul>
+            <ul class="joll_10">
+                <li><p>Add enough water to cover about a centimetre above the rice level after stirring in.</p></li>
+            </ul>
+            <ul class="joll_11">
+                <li><p>Bring to a boil, then turn down to low heat and cook for 20 minutes without removing the lid.</p></li>
+            </ul>
+            <ul class="joll_image3">
+                <img src="Step4.jpg" alt="Rice image" width="270px" height="250px">
+            </ul>
+            <ul class="joll_12">
+                <li><p>Turn off the heat after 20 minutes, DO NOT REMOVE THE LID;<br>you need the steam for it to continue cooking the rice for another 20 minutes.</p></li>
+            </ul>
+            <ul class="joll_image4">
+                <img src="Step5.jpg" alt="Rice image" width="270px" height="250px">
+            </ul>
+            <ul class="joll_13">
+                <li><p>After the full cooking time, remove the lid and use a fork to fluff up the jollof rice. <br>There will be a layer of rice stuck to the bottom of the pan. <br>This is due to the cooking time with direct heat on the bottom with the natural sugars from the tomato base.</p></li>
+            </ul>
+            <ul class="joll_image5">
+                <img src="Step6.jpeg" alt="Rice image" width="270px" height="250px">
+            </ul>
+        </div>
+        <div>
+            <h2 class="joll_14">
+                How it is Serve
+            </h2>
+            <ul class="joll_15">
+                <li><p>Enjoy a flavorful dish of jollof rice with the perfect complement: <br>Vegetable Salad or sweet fried plantains. Boiled eggs are another favourite.</li></p>
+            </ul>
+            <ul class="joll_image6">
+                <img src="Serve.jpeg" alt="Rice image" width="270px" height="250px">
+            </ul>
+        </div>
+        <ul class="joll_16">
+            <li><p>You can also served alongside meat such as grilled chicken kebabs, suya beef skewers, fried chicken, fish, beef.</p></li>
+        </ul>
+    </body>
+    <footer>
+        <div>
+             <ul class="joll_17">
+                <p>To Contact Us, Click on Contact Us link Below.</p>
+             </ul>
+            <h2 class="joll_18">
+                <a href="Contact Us.html">Contact Us</a>
+            </h2>
+        </div> 
+        <div>
+            <p>To go back to the Index Page click below.</p>
+            <h2>
+                <a href="index.html"> Index Page</a>
+            </h2>
+        </div>
+            
+        </body>
+        </footer>
+    </html>
