--- a/LOGO/LOGO/LOGO/Salad Recipe.html
+++ b/LOGO/LOGO/LOGO/Salad Recipe.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Salad Recipe</title>
 </head>
 <link rel="stylesheet" href="style.css">
 <body class="Salad recipes_body">
     <div>
         <div class="sal_1">
-            <h3 class="sal_2_heading">
+            <h3 class="sal_2">
                 Salad Recipes
             </h3>
         </div>
@@ -20,7 +20,7 @@
     <form class="sal_3 salad Recipes-form" action="Salad Recipes.php" method="post">
         <div>
             <h2 class="sal_4">
-                Recipes For Salad
+                Ingredients For Salad
             </h2>
         </div>
         <div>
@@ -97,8 +97,28 @@
             </ul>
         </div>
         <div>
-            <h2 class="sa_22">
+            <h2 class="sal_22">
                 How it is Serve
             </h2>
-            <li>Finally, serve with the salad cream(or mayonnaise) and Enjoy.</li>
+            <ul class="sal_23">
+                <li><p>Finally, serve with the salad cream(or mayonnaise) and Enjoy.</p></li>
+            </ul>
         </div>
+        <footer>
+        <div>
+             <ul class="sal_24">
+                <p>To Contact Us, Click on Contact Us link Below.</p>
+             </ul>
+            <h2 class="sal_25">
+                <a href="Contact Us.html">Contact Us</a>
+            </h2>
+        </div>
+        <div>
+            <p>To go back to the Index Page click below.</p>
+           <h2>
+              <a href="Index.html"> Index Page</a>
+           </h2>
+        </div>
+        </footer>
+        </body>
+        </html>
