--- a/LOGO/LOGO/LOGO/addRecipe.html
+++ b/LOGO/LOGO/LOGO/addRecipe.html
@@ -25,5 +25,13 @@
             &nbsp;&nbsp;&nbsp;&nbsp;
             <input type="button" value="Reset" />
         </form>
+    <footer>
+         <div>
+            <p>To go back to the Index Page click below.</p>
+                <h2>
+                    <a href="Index.html"> Index Page</a>
+               </h2>
+         </div>
+    </footer>
 </body>
 </html> 
