--- a/LOGO/LOGO/LOGO/About Us.html
+++ b/LOGO/LOGO/LOGO/About Us.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>About Us</title>
     <style>
        
 
@@ -52,12 +52,11 @@
             <a href="http://www.linkedIn.com"><img src="in.jpeg" alt="linkedIn" wigth="20px" height="20px"></a>
         </ul>
     </h2>
-    <div>
-        <ul>
+        <div class="p4">
+            <p>To go back to the Index Page click below.</p>
             <h2>
-                <p><a href="index.html">Index Page</a></p>
+                <a href="index.html"> Index Page</a>
             </h2>
-        </ul>
-    </div>
+        </div>
 </footer>
 </html>
