--- a/LOGO/LOGO/LOGO/upload Video.html
+++ b/LOGO/LOGO/LOGO/upload Video.html
@@ -15,5 +15,13 @@
     <input type="file" id="video" name="video" accept="videp/*"><br>
     <input type="submit" value="Uplaod">
 </form>
+<footer>
+    <div>
+        <p>To go back to the Index Page click below.</p>
+        <h2>
+            <a href="Index.html"> Index Page</a>  
+        </h2>
+    </div>
+</footer>
 </body>
 </html>
