--- a/LOGO/Group Recipes.html
+++ b/LOGO/Group Recipes.html
@@ -54,7 +54,7 @@
             </ul>
             <ul class="group_6">
                 <h2>
-                <a href="///C:/xampp/htdocs/xampp/LOGO/Individual%20Recipes.html">Individual Recipe</a>
+                <a href="Individual Recipes.html">Individual Recipe</a>
                 </h2>
             </ul>
         </div>
