--- a/LOGO/Home.html
+++ b/LOGO/Home.html
@@ -45,6 +45,7 @@
                    <p><a href="deleteRecipe.html">Click here to Delete Recipe</a></p>
                    <p><a href="searchRecipe.html">Click here to Search Recipe</a></p>
                    <p><a href="upload video.html">Click here to upload video</a></p>
+                   <p><a href="uploadImage.html">Click here to upload Images</a></p>
                 </h2>
             </ul>
         </div>
