--- a/LOGO/coconut rice recipe.html
+++ b/LOGO/coconut rice recipe.html
@@ -41,12 +41,12 @@
     </div>
     <form class="chi_3 coconut rice Recipe-form" action="Coconut rice Recipe.php" method="post">
         <div>
-            <h2 class="sal_4">
+            <h2 class="coco_4">
                 Ingredients For Coconut Rice
             </h2>
         </div>
         <div>
-            <ul class="sal_5">
+            <ul class="coco_5">
                 <li><p>Rice.</p></li>
                 <li><p>Coconut Milk.</p></li>
                 <li><p>Salt.</p></li> 
@@ -59,10 +59,92 @@
                 <li><p>Maggi.</p></li>
                 <li><p>Curry Powder.</p></li>
                 <li><p>Nutmeg.</p></li> 
-                <li><p>Chicken Stock.</p></li>
+                <li><p>Chicken or beef Stock.</p></li>
+                <li><p>Cray fish.</p></li>
+                <li><p>Fresh Tomatoe.</p></li>
+                <li><p>Bay leave.</p></li>
+                <li><p>Dry Fish</p></li>
+                <li><p>shrimps.</p></li>
             </ul>
         </div>
         <div>
-            <h2 class="sal_6">
+            <h2 class="coco_6">
                 How to Prepare Coconut Rice
             </h2>
+        </div> 
+        <div class="coco_7">
+            <ul>
+                <li><p>Finely chop onion set aside, Cut tomatoes into large chunks set aside,<br> Mince chili pepper set aside.</p></li>
+            </ul>
+            <ul class="cocoimage1">
+                <img src="Cocoimage1.jpg" alt="Rice image" width="270px" height="250px"></a>
+            </ul>
+            <ul>
+                <li><p>Rinse rice under cold running water to remove all traces of starch</p></li>
+            </ul>
+            <ul>
+                <li><p>Place a cooking pot on medium heat. Add in 1 tbsp of coconut oil<br> (sub vegetable oil). Add in onion. Cook until translucent and fragrant.</p></li>
+            </ul>
+            <ul class="cocoimage2">
+                <a><img src="Cocoimage2.jpg" alt="Rice image" width="270px" height="250px"></a>
+            </ul>
+            <ul>
+                <li><p>Add in tomato, minced pepper and spices. Stir.<br> Cover and leave to simmer on low-medium heat for 10 minutes.</p></li>
+            </ul>
+            <ul class="cocoimage3">
+                <a><img src="Cocoimage3.jpg" alt="Rice image" width="270px" height="250px"></a>
+            </ul>
+            <ul>
+                <li><p>Add coconut milk and one, CrayFish, dry fish and shrimps into the tomato mix. Stir.<br> Cover and bring to a rolling boil. Stir. Taste and adjust for seasoning. .</p></li>
+            </ul>
+            <ul class="cocoimage4">
+                <a><img src="Cocoimage4.jpg" alt="Rice image" width="270px" height="250px"></a>
+            </ul>
+            <ul>
+                <li><p>Add in washed rice. Stir. Reduce heat to low-medium (4 on a marked cooker).</p></li>
+            </ul>
+            <ul class="cocoimage5">
+                <a><img src="Cocoimage5.jpg" alt="Rice image" width="270px" height="250px"></a>
+            </ul>
+            <ul>
+                <li><p>Place a sheet of foil over the pot. Place the lid over it <br>and properly seal the edges with foil (this is a very important step).</p></li>
+                <li><p>Set a timer for 30 minutes and let it go! You have done all you can 😂,<br> let Jesus take the wheel. Leave it alone! Don’t open the pot until time is up.</p></li>
+            </ul>
+            <ul class="cocoimage6">
+                <a><img src="Cocoimage6.jpg" alt="Rice image" width="270px" height="250px"></a>
+            </ul>
+            <ul>
+                <li><p>By covering the pot with foil & then a lid, you are able to get away with using less liquid.<br> The rice grains are gently steamed & infused instead of being boiled. End result is perfectly separate & delicious grains .</p></li>
+            </ul>
+            <ul class="cocoimage7">
+                <a><img src="Cocoimage7.jpg" alt="Rice image" width="270px" height="250px"></a>
+            </ul>
+            <h2>How To Serve</h2>
+            <ul>
+                <li><p>Serve coconut rice with Peppered meat, Fish, Prawn or chicken.</p></li>
+            </ul>
+            <ul class="cocoimage8">
+                <a><img src="Cocoimage8.jpg" alt="Rice image" width="270px" height="250px"></a>
+            </ul>
+        </div> 
+        <footer>
+            <div>
+                 <ul class="coco_8">
+                    <p>To Contact Us, Click on Contact Us link Below.</p>
+                 </ul>
+                <h2 class="coco_9">
+                    <a href="Contact Us.html">Contact Us</a>
+                </h2>
+            </div> 
+            <div>
+                <ul class="coco_10">
+                <p>To go back to the Individual Page click below.</p>
+                <h2>
+                    <a href="Individual Recipes.html"> Individual Recipe Page</a>
+                </h2>
+                </ul>
+            </div>
+                
+            </body>
+        </footer>
+        </html>
