--- a/LOGO/login.html
+++ b/LOGO/login.html
@@ -33,9 +33,10 @@
             <div class="L_image">  
                 <!--<img src="Grp_rice.jpg" alt="Rice image">-->
        <form class="row_1 login-form " action="login.php" method="post">
+               <p>Login As Chef or Admin</p>
             <div class="col">
-              <label for="email address" class="form-label email address">Email Address</label><br>
-              <input type="text" class="form-control Email Address" id="emailAddress" placeholder="" name="email" required><br>
+              <label for="email address" class="form-label username">username</label><br>
+              <input type="text" class="form-control username" id="username" placeholder="" name="username" required><br>
             </div>
             <div class="col_1">
                 <label for="password" class="form-label password_label">Password</label><br>
