--- a/LOGO/uploadImage.html
+++ b/LOGO/uploadImage.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Video Uplaod Form</title>
+    <title>Image Uplaod Form</title>
 </head>
 <link rel="stylesheet" href="style.css">
 <body>
     <div>
     <header>
-   <!---- <p>Video Upload</p>--->
+   <!---- <p>image Upload</p>--->
         <nav class="nav_container2">
             <ul class="ul_nav2">
                 <li>
@@ -38,9 +38,6 @@
         <img src="Grp_rice.jpg" alt="Rice image" width="1270px" height="350px"> 
     </div>
 <form class="vid_1 /upload video" action="upload Video.php" method="post" enctype="multipart/form-data">
-   <!---- <label for="video">Choose a video to Upload</label>
-    <input type="file" id="video" name="video" accept="videp/*"><br>
-    <input type="submit" value="Uplaod">-->
     <label for="image">Choose a Image to Upload</label>
     <input type="file" id="image" name="image" accept="image/*"><br>
     <input type="submit" value="Uplaod">
