--- a/LOGO/upload Video.html
+++ b/LOGO/upload Video.html
@@ -37,7 +37,7 @@
     <div class="L_image">  
         <img src="Grp_rice.jpg" alt="Rice image" width="1270px" height="350px"> 
     </div>
-<form class="vid_1 /upload video" action="upload Video.php" method="post" enctype="multipart/form-data">
+<form class="row_1 login-form" action="upload Video.php" method="post" enctype="multipart/form-data">
    <!---- <label for="video">Choose a video to Upload</label>
     <input type="file" id="video" name="video" accept="videp/*"><br>
     <input type="submit" value="Uplaod">-->
