--- a/LOGO/searchRecipe.html
+++ b/LOGO/searchRecipe.html
@@ -34,8 +34,8 @@
     <div class="L_image">  
         <img src="Grp_rice.jpg" alt="Rice image" width="1270px" height="350px"> 
     </div>
-    <h3>You can Search a Recipe here</h3>
-    <form method="post" action="searchRecipe.php">
+    <form class="row_1 login-form" method="post" action="searchRecipe.php">
+        <h3>You can Search a Recipe here</h3>
         <label>Recipe Name:</label>
         <input type="text" name="RecipeName" />
         <br><br>
