--- a/LOGO/Group Recipes.html
+++ b/LOGO/Group Recipes.html
@@ -42,13 +42,19 @@
         </div>
     </div>
     <form class="group_3 Group Recipes-form" action="Group Recipes.php" method="post">
-        <div class="group_img">
-            <img src="Coconut rice-27-1.jpg" alt="Rice image" width="250px" height="250px">
+        <div class="row_1 login-form">
+            <img src="Coconut rice-27-1.jpg" alt="Rice image" width="150px" height="200px">
             <a>Coconut Rice Recipes</a>
-            <img src="jollof rice.jpg" alt="Rice image" width="250px" height="250px">
+            <img src="jollof rice.jpg" alt="Rice image" width="150px" height="200px">
                 <a>Jollof Rice Recipes</a>
         </div>
         <div>
+            <ul>
+               <p> To view New Recipe added by the Chef, click on the link below.</p>
+            </ul>
+            <h2>
+                <a href="http://localhost/database/estacyrice/LOGO/group%20recipes.php">New Added Recipe</a>
+            </h2>
             <ul class="group_5">
                 <p>To Explore the Individual Recipe of Each of the Meal, Click on the Individual Recipe Link Below.</p>
             </ul>
