--- a/LOGO/Home.html
+++ b/LOGO/Home.html
@@ -39,12 +39,12 @@
     </header>
         <div>
             <ul>
-                <h2 class="roll_5">
-                   <p><a href="addRecipe.html">Click here to Add Recipe</a></p>
-                   <p><a href="editRecipe.html">Click here to Edit Recipe</a></p>
-                   <p><a href="deleteRecipe.html">Click here to Delete Recipe</a></p>
-                   <p><a href="searchRecipe.html">Click here to Search Recipe</a></p>
-                   <p><a href="upload video.html">Click here to upload video</a></p>
+                <h2 class="row_1 login-form">
+                   <p><a href="addRecipe.html">Add Recipe</a></p>
+                   <p><a href="editRecipe.html">Edit Recipe</a></p>
+                   <p><a href="deleteRecipe.html">Delete Recipe</a></p>
+                   <p><a href="SeearchRecipe.html">Search Recipe</a></p>
+                   <p><a href="upload video.html">Upload video</a></p>
                 </h2>
             </ul>
         </div>
