--- a/LOGO/Individual Recipes.html
+++ b/LOGO/Individual Recipes.html
@@ -37,10 +37,8 @@
             <img src="Grp_rice.jpg" alt="Rice image" width="1270px" height="350px">
         </div>
     </div>
-
-     <?php include('fetchindividualrecipe.php'); ?>
    <form class="ind_3 Individual Recipes-form" action="Individual Recipes.php" method="post">
-        <div class="ind_4">
+        <div class="row_1 login-form">
             <img src="Salad.jpeg" alt="Salad image" width="180px" height="180px">
             <li>
                 <a href="salad recipe.html">Salad Recipe</a>
@@ -63,6 +61,12 @@
             </li>
         </div>
         <div>
+            <ul>
+                <p>To veiw New Recipe Added by the Chef, click on the link below.</p>
+            </ul>
+            <ul>
+                <h2><a href="http://localhost/database/estacyrice/LOGO/individual%20recipes.php">New Reipe</a></h2>
+            </ul>
             <ul class="ind_7">
                 <p>To Explore more on the Individual Recipe, Click on each of them.</p>
             </ul>
