--- a/LOGO/searchGroupRecipe.html
+++ b/LOGO/searchGroupRecipe.html
@@ -34,8 +34,8 @@
     <div class="L_image">  
         <img src="Grp_rice.jpg" alt="Rice image" width="1270px" height="350px"> 
     </div>
-    <form class="row_1 login-form" method="post" action="searchRecipe.php">
-        <h3> Search Recipe here</h3>
+    <form class="row_1 login-form" method="post" action="searchGroupRecipe.php">
+        <h3> Search Group Recipe here</h3>
         <label>Recipe Name:</label>
         <input type="text" name="RecipeName" />
         <br><br>
