--- a/LOGO/index.html
+++ b/LOGO/index.html
@@ -15,6 +15,10 @@
                     <img src="logo esther.png" alt="Estacy logo" width="100px" height="100px">
                 </a>
             </div>
+            <form action="homesearch.php" method="GET">
+                <input type="text" name="query" placeholder="Search...">
+                <button type="submit">Search</button>
+            </form>
             <nav class="nav_container">
                 <ul class="ul_nav">
                     <li>
