--- a/LOGO/login.html
+++ b/LOGO/login.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script defer src="validation.js"></script>
 </head>
 <link rel="stylesheet" href="style.css">
 <body class="login-body">
@@ -32,7 +33,7 @@
         </div>
             <div class="L_image">  
                 <!--<img src="Grp_rice.jpg" alt="Rice image">-->
-       <form class="row_1 login-form " action="login.php" method="post">
+       <form class="row_1 login-form " action="login.php" id="form" method="post">
                <p>Login As Chef or Admin</p>
             <div class="col">
               <label for="email address" class="form-label username">username</label><br>
