--- a/LOGO/searchIndividualRecipe.html
+++ b/LOGO/searchIndividualRecipe.html
@@ -34,7 +34,7 @@
     <div class="L_image">  
         <img src="Grp_rice.jpg" alt="Rice image" width="1270px" height="350px"> 
     </div>
-    <form class="row_1 login-form" method="post" action="searchRecipe.php">
+    <form class="row_1 login-form" method="post" action="searchIndividualRecipe.php">
         <h3> Search Recipe here</h3>
         <label>Recipe Name:</label>
         <input type="text" name="RecipeName" />
