--- a/LOGO/deleteGroupRecipe.html
+++ b/LOGO/deleteGroupRecipe.html
@@ -1,12 +1,11 @@
 <html>
 <head>
-    <title>Add Recipe</title>
+    <title>Search Form</title>
 </head>
 <link rel="stylesheet" href="style.css">
 <body>
     <div>
         <header>
-            <!---<h2>Add Recipe</h2>-->
             <nav class="nav_container4">
                 <ul class="ul_nav4">
                     <li>
@@ -31,22 +30,26 @@
             </nav>
             </header>
         </div>
+    <!--<h1>Welcome to EstacyRice</h1>-->
     <div class="L_image">  
         <img src="Grp_rice.jpg" alt="Rice image" width="1270px" height="350px"> 
     </div>
-    <div> 
-    <nav class="row_1 login-form">
-        <h3><a href="../LOGO/deleteIndividualRecipe.html">Delete Individual Recipe</a><br><a href="../LOGO/deleteGroupRecipe.html">Delete Group Recipe</a></h1>
-        </nav>
-        </div> 
-        </form>
+    <form class="row_1 login-form" method="post" action="deleteGroupRecipe.php">
+        <h3> Delete Group Recipe here</h3>
+        <label>Recipe Name:</label>
+        <input type="text" name="recipename" />
+        <br><br>
+        <input type="submit" name="submit" value="Delete" />
+        &nbsp;&nbsp;&nbsp;&nbsp;
+        <input type="button" value="Reset" />
+    </form>
     <footer>
-         <div>
-            <p>To go back to the Home Page click below.</p>
-                <h2>
-                    <a href="Home.html"> Home Page</a>
-               </h2>
-         </div>
+        <div>
+            <p>To go back to the home Page click below.</p>
+           <h2>
+              <a href="Home.html"> Home Page</a>
+           </h2>
+        </div>
     </footer>
 </body>
-</html> 
+</html>
